--- a/skinmodel1.ipynb
+++ b/skinmodel1.ipynb
@@ -41,7 +41,7 @@
     "# Loop through each subfolder and collect all image paths\n",
     "for subdir, _, files in os.walk(main_directory):\n",
     "    for file in files:\n",
-    "        if file.endswith(('.jpg')):  # Adjust the extensions as per your dataset\n",
+    "        if file.endswith(('.jpg')):  \n",
     "            image_paths.append(os.path.join(subdir, file))\n",
     "\n",
     "# Select 5 random images from the collected image paths\n",
