--- a/skinmodel1.ipynb
+++ b/skinmodel1.ipynb
@@ -32,7 +32,7 @@
     "from matplotlib import pyplot as plt\n",
     "from PIL import Image\n",
     "\n",
-    "# Path to the main directory containing subfolders with images\n",
+    "# Path to the main directory \n",
     "main_directory = 'Skin_Conditions'\n",
     "\n",
     "# List to store image paths\n",
