--- a/skinmodel1.ipynb
+++ b/skinmodel1.ipynb
@@ -110,10 +110,10 @@
     "# List to store image paths\n",
     "image_paths = []\n",
     "\n",
-    "# Loop through each subfolder and collect all image paths\n",
+    "# \n",
     "for subdir, _, files in os.walk(main_directory):\n",
     "    for file in files:\n",
-    "        if file.endswith(('.jpg', '.jpeg', '.png')):  # Adjust the extensions as per your dataset\n",
+    "        if file.endswith(('.jpg', '.jpeg', '.png')):  #\n",
     "            image_paths.append(os.path.join(subdir, file))\n",
     "\n",
     "# Select one random image from the collected image paths\n",
@@ -125,7 +125,7 @@
     "# Define the transform to convert the image to a tensor\n",
     "transform = transforms.ToTensor()\n",
     "\n",
-    "# Apply the transform to the image\n",
+    "# \n",
     "image_tensor = transform(image)\n",
     "\n",
     "# Display the tensor\n",
