made the code more understandable

--- a/skinmodel1.ipynb
+++ b/skinmodel1.ipynb
@@ -43,16 +43,12 @@
     "from PIL import Image\n",
     "import glob\n",
     "\n",
-    "# Path to the main directory containing subfolders with images\n",
     "main_directory = 'Skin_Conditions'\n",
     "\n",
-    "# Use glob to find all .jpg files in subdirectories\n",
     "image_paths = glob.glob(os.path.join(main_directory, '**', '*.jpg'), recursive=True)\n",
     "\n",
-    "# Select 5 random images image paths\n",
     "random_images = random.sample(image_paths, 5)\n",
     "\n",
-    "# Display the selected images\n",
     "plt.figure(figsize=(15, 10))\n",
     "\n",
     "for i, image_path in enumerate(random_images):\n",
@@ -109,27 +105,21 @@
     "import torch\n",
     "from torchvision import transforms\n",
     "\n",
-    "# Path to the main directory containing subfolders with images\n",
     "main_directory = 'Skin_Conditions'\n",
     "\n",
     "image_paths = []\n",
     "\n",
-    "# Loop through each subfolder and collect all image paths\n",
     "for subdir, _, files in os.walk(main_directory):\n",
     "    for file in files:\n",
     "        if file.endswith(('.jpg', '.jpeg')):  \n",
     "            image_paths.append(os.path.join(subdir, file))\n",
     "\n",
-    "# Select one random image from the collected image paths\n",
     "random_image_path = random.choice(image_paths)\n",
     "\n",
-    "# Load the image using PIL\n",
     "image = Image.open(random_image_path)\n",
     "\n",
-    "# Define the transform to convert the image to a tensor\n",
     "transform = transforms.ToTensor()\n",
     "\n",
-    "# Apply the transform to the image\n",
     "image_tensor = transform(image)\n",
     "\n",
     "# Display the tensor\n",
@@ -248,7 +238,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Split the dataset into training and test sets\n",
     "train_image_paths, test_image_paths, train_labels, test_labels = train_test_split(\n",
     "    full_dataset.image_paths, full_dataset.labels, test_size=0.2, random_state=42, stratify=full_dataset.labels\n",
     ")"
@@ -260,7 +249,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 5: Create dataset instances for training and testing\n",
     "train_dataset = SkinConditionDataset(image_paths=train_image_paths, labels=train_labels, transform=transform)\n",
     "test_dataset = SkinConditionDataset(image_paths=test_image_paths, labels=test_labels, transform=transform)"
    ]
@@ -472,7 +460,6 @@
     "\n",
     "# Define a function to test the model using a dummy input\n",
     "def test_custom_cnn():\n",
-    "    # Instantiate the model and move it to the device (CPU or GPU)\n",
     "    model = CustomCNN(num_classes=num_classes).to(device)\n",
     "\n",
     "    # Create a dummy input tensor with the shape (batch_size, channels, height, width)\n",
@@ -611,7 +598,7 @@
     "        \"test_acc\": [],\n",
     "        \"test_precision\": [],\n",
     "        \"test_recall\": []\n",
-    "    }  # Dictionary to store training and testing results for each epoch\n",
+    "    }  \n",
     "\n",
     "    for epoch in tqdm(range(epochs), desc=\"Epochs\"):  # Loop through all epochs\n",
     "        train_loss, train_acc, train_precision, train_recall = train_step(model,\n",
@@ -786,11 +773,10 @@
     "\n",
     "y_preds = []\n",
     "y_trues = []  \n",
-    "model.eval()  # Ensure model is in evaluation mode\n",
+    "model.eval()  \n",
     "\n",
     "with torch.inference_mode():  \n",
     "    for X, y in tqdm(test_dataloader, desc='feeling good...'):\n",
-    "        # Send data to the target device\n",
     "        X, y = X.to(device), y.to(device)\n",
     "        \n",
     "        y_logit = model(X)\n",
@@ -916,7 +902,6 @@
     "fig, axs = plt.subplots(3, 3, figsize=(12, 12))  # 3x3 grid\n",
     "axs = axs.flatten()  \n",
     "\n",
-    "# Plot each randomly chosen image\n",
     "for i, idx in enumerate(random_indices):\n",
     "    img = images[idx].permute(1, 2, 0).numpy()  # Convert from CHW to HWC\n",
     "    true_label = trues[idx].item()\n",
