--- a/skinmodel1.ipynb
+++ b/skinmodel1.ipynb
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,15 +526,15 @@
     "    precision = precision_score(all_labels, all_preds, average = 'weighted', zero_division=0)\n",
     "    recall = recall_score(all_labels, all_preds, average='weighted', zero_division=0)\n",
     "\n",
-    "    train_loss /= len(dataloader)  # Average the loss over all batches\n",
-    "    train_acc /= len(dataloader.dataset)  # Average the accuracy over all examples\n",
+    "    train_loss /= len(dataloader)  \n",
+    "    train_acc /= len(dataloader.dataset)  \n",
     "\n",
     "    return train_loss, train_acc, precision, recall"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,22 +559,21 @@
     "            _, predicted = torch.max(y_pred, 1)  \n",
     "            test_acc += (predicted == y).sum().item()  \n",
     "            \n",
-    "            # Store predictions and labels for precision/recall calculation\n",
     "            all_preds.extend(predicted.cpu().numpy())\n",
     "            all_labels.extend(y.cpu().numpy())\n",
     "\n",
     "    precision = precision_score(all_labels, all_preds, average='weighted', zero_division=0)\n",
     "    recall = recall_score(all_labels, all_preds, average='weighted', zero_division=0)\n",
     "\n",
-    "    test_loss /= len(dataloader)  # Average the loss over all batches\n",
-    "    test_acc /= len(dataloader.dataset)  # Average the accuracy over all examples\n",
+    "    test_loss /= len(dataloader)  \n",
+    "    test_acc /= len(dataloader.dataset)  \n",
     "\n",
     "    return test_loss, test_acc, precision, recall"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,21 +599,20 @@
     "        \"test_recall\": []\n",
     "    }  \n",
     "\n",
-    "    for epoch in tqdm(range(epochs), desc=\"Epochs\"):  # Loop through all epochs\n",
+    "    for epoch in tqdm(range(epochs), desc=\"Epochs\"):  \n",
     "        train_loss, train_acc, train_precision, train_recall = train_step(model,\n",
     "                                                                          train_dataloader,\n",
     "                                                                          loss_fn,\n",
     "                                                                          optimizer,\n",
-    "                                                                          device)  # Train the model\n",
+    "                                                                          device)  \n",
     "\n",
     "        test_loss, test_acc, test_precision, test_recall = test_step(model,\n",
     "                                                                     test_dataloader,\n",
     "                                                                     loss_fn,\n",
-    "                                                                     device)  # Evaluate the model\n",
+    "                                                                     device) \n",
     "\n",
     "        scheduler.step(test_loss)  # Update the learning rate based on the test loss\n",
     "\n",
-    "        # Append results for this epoch to the results dictionary\n",
     "        results['train_loss'].append(train_loss)\n",
     "        results['train_acc'].append(train_acc)\n",
     "        results['train_precision'].append(train_precision)\n",
@@ -624,7 +622,6 @@
     "        results['test_precision'].append(test_precision)\n",
     "        results['test_recall'].append(test_recall)\n",
     "\n",
-    "        # Print epoch results to monitor the training process\n",
     "        print(f\"Epoch {epoch + 1}/{epochs} - Train Loss: {train_loss:.4f}, Train Acc: {train_acc:.4f}, \"\n",
     "              f\"Train Precision: {train_precision:.4f}, Train Recall: {train_recall:.4f}, \"\n",
     "              f\"Test Loss: {test_loss:.4f}, Test Acc: {test_acc:.4f}, \"\n",
