--- a/skinmodel1.ipynb
+++ b/skinmodel1.ipynb
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +458,6 @@
     "        #print(f\"Shape final: {x.shape}\")\n",
     "        return x\n",
     "\n",
-    "# Define a function to test the model using a dummy input\n",
     "def test_custom_cnn():\n",
     "    model = CustomCNN(num_classes=num_classes).to(device)\n",
     "\n",
@@ -470,7 +469,6 @@
     "    print(f\"Output shape: {output.shape}\")\n",
     "    print(f\"Output tensor: {output}\")\n",
     "\n",
-    "    # Print the summary of the model\n",
     "    summary(model, input_size=(3, 224, 224), device=str(device))\n",
     "\n",
     "test_custom_cnn()"
@@ -699,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -719,10 +717,8 @@
     "def plot_loss_and_accuracy(results):\n",
     "    epochs = range(1, len(results['train_loss']) + 1)\n",
     "\n",
-    "    # Create a figure with two subplots: one for loss and one for accuracy\n",
     "    fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(15, 5))\n",
     "\n",
-    "    # loss on first subplot\n",
     "    ax1.plot(epochs, results['train_loss'], 'b', label='Training loss')\n",
     "    ax1.plot(epochs, results['test_loss'], 'r', label='Test loss')\n",
     "    ax1.set_title('Training and Testing Loss over Epochs')\n",
@@ -730,7 +726,6 @@
     "    ax1.set_ylabel('Loss')\n",
     "    ax1.legend()\n",
     "\n",
-    "    # accuracy on second subplot\n",
     "    ax2.plot(epochs, results['train_acc'], 'b', label='Training Accuracy')\n",
     "    ax2.plot(epochs, results['test_acc'], 'r', label='Test Accuracy')\n",
     "    ax2.set_title('Training and Testing Accuracy over Epochs')\n",
@@ -746,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -782,7 +777,7 @@
     "        y_pred = torch.softmax(y_logit, dim=1).argmax(dim=1)\n",
     "        \n",
     "        y_preds.append(y_pred.cpu())\n",
-    "        y_trues.append(y.cpu())  # Append true labels\n",
+    "        y_trues.append(y.cpu())  \n",
     "\n",
     "y_pred_tensor = torch.cat(y_preds)\n",
     "y_true_tensor = torch.cat(y_trues)\n"
@@ -821,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -887,7 +882,6 @@
     "        preds.extend(y_pred.cpu()) \n",
     "        trues.extend(y.cpu())  \n",
     "\n",
-    "# Convert everything to tensors\n",
     "images = torch.stack(images)\n",
     "preds = torch.stack(preds)\n",
     "trues = torch.stack(trues)\n",
@@ -896,15 +890,15 @@
     "num_images = len(images)\n",
     "random_indices = np.random.choice(num_images, 9, replace=False)\n",
     "\n",
-    "fig, axs = plt.subplots(3, 3, figsize=(12, 12))  # 3x3 grid\n",
+    "fig, axs = plt.subplots(3, 3, figsize=(12, 12)) \n",
     "axs = axs.flatten()  \n",
     "\n",
     "for i, idx in enumerate(random_indices):\n",
-    "    img = images[idx].permute(1, 2, 0).numpy()  # Convert from CHW to HWC\n",
+    "    img = images[idx].permute(1, 2, 0).numpy() \n",
     "    true_label = trues[idx].item()\n",
     "    pred_label = preds[idx].item()\n",
     "\n",
-    "    axs[i].imshow(np.clip(img, 0, 1))  # Clip pixel values to [0, 1] for display\n",
+    "    axs[i].imshow(np.clip(img, 0, 1))  \n",
     "    axs[i].axis('off') \n",
     "\n",
     "    # Set the title based on whether the prediction is correct or not\n",
